prevent menu flickering

--- a/Assets/less/inc/core.less
+++ b/Assets/less/inc/core.less
@@ -11,6 +11,13 @@
 
 .styleguide {
 
+	background: @styleguide-nav-background;
+
+	body {
+		background: @styleguide-background;
+		min-height: 100vh;
+	}
+
 	h3 {
 		text-transform: uppercase;
 		font-weight: bold;
